fix layout issue

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -7512,7 +7512,10 @@ figure.nav-overlay {
 
 .module {
     color: #FFF;
-    padding: 82px 0
+    padding: 82px 0;
+    &.module-header {
+        padding: 58px 0;
+    }
 }
 
 @media (max-width:767px) {
@@ -7867,6 +7870,7 @@ aside {
         font-size: 20px;
         .content__item {
             display: none;
+            margin-bottom: 24px;
             .title {
                 margin-left: 1em;
                 margin-bottom: 1em;
